cargo_check_markdown.log
    Checking forge-renderer v0.1.0 (/app/crates/forge-renderer)
warning: variable does not need to be mutable
  --> crates/forge-search/src/content.rs:54:13
   |
54 |         let mut results = Vec::new();
   |             ----^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: `forge-search` (lib) generated 1 warning (run `cargo fix --lib -p forge-search` to apply 1 suggestion)
warning: unused import: `Pixel`
 --> crates/forge-test-tools/src/screenshot.rs:1:24
  |
1 | use image::{RgbaImage, Pixel};
  |                        ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ElementState` and `MouseButton`
 --> crates/forge-test-tools/src/input_sim.rs:1:20
  |
1 | use winit::event::{ElementState, MouseButton, WindowEvent};
  |                    ^^^^^^^^^^^^  ^^^^^^^^^^^

warning: `forge-test-tools` (lib) generated 2 warnings (run `cargo fix --lib -p forge-test-tools` to apply 2 suggestions)
    Checking forge-app v0.1.0 (/app/crates/forge-app)
error[E0106]: missing lifetime specifier
 --> crates/forge-app/src/markdown.rs:3:70
  |
3 | pub fn parse_markdown(text: &str, base_attrs: Attrs) -> Vec<(String, Attrs)> {
  |                             ----              -----                  ^^^^^ expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `text` or `base_attrs`
help: consider introducing a named lifetime parameter
  |
3 | pub fn parse_markdown<'a>(text: &'a str, base_attrs: Attrs<'a>) -> Vec<(String, Attrs<'a>)> {
  |                      ++++        ++                       ++++                       ++++

warning: variable does not need to be mutable
   --> crates/forge-app/src/application.rs:372:13
    |
372 |         let mut file_explorer = crate::file_explorer::FileExplorer::new();
    |             ----^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
 --> crates/forge-app/src/debug_views.rs:9:13
  |
9 |         let mut rects = Vec::new();
  |             ----^^^^^
  |             |
  |             help: remove this `mut`

For more information about this error, try `rustc --explain E0106`.
warning: `forge-app` (bin "forge") generated 2 warnings
error: could not compile `forge-app` (bin "forge") due to 1 previous error; 2 warnings emitted
